attached_assets/Pasted-env-load-env-production-env-env-export-EXPO-PUBLIC-STRAVA-CLIENT-ID-EXPO-PUBLIC-STRAVA-CLIENT-SE-1754044955404_1754044955404.txt
env: load .env.production .env
env: export EXPO_PUBLIC_STRAVA_CLIENT_ID EXPO_PUBLIC_STRAVA_CLIENT_SECRET EXPO_PUBLIC_CLARIFAI_API_KEY EXPO_PUBLIC_GOOGLE_VISION_API_KEY EXPO_PUBLIC_EMAILJS_SERVICE_ID EXPO_PUBLIC_EMAILJS_TEMPLATE_ID EXPO_PUBLIC_EMAILJS_PUBLIC_KEY EXPO_PUBLIC_API_URL EXPO_PUBLIC_VPS_URL EXPO_PUBLIC_DEV_SERVER_URL EXPO_PUBLIC_APP_STORE_URL EXPO_PUBLIC_SUPPORT_EMAIL
Starting Metro Bundler
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓░░░░░░░░░░ 39.9% (403/638)
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓░░░ 83.2% (1279/1402)
iOS Bundling failed 6500ms node_modules/expo-router/entry.js (1551 modules)
SyntaxError: /Users/expo/workingdir/build/utils/storage.ts: Unexpected token (1080:4)
  1078 |     console.error('Erreur connexion API:', error);
  1079 |     return { success: false, message: 'Erreur connexion API' };
> 1080 |   } catch (timeoutError) {
       |     ^
  1081 |     console.error('Timeout de connexion:', timeoutError);
  1082 |     return { success: false, message: 'Timeout de connexion (10s)' };
  1083 |     }
SyntaxError: SyntaxError: /Users/expo/workingdir/build/utils/storage.ts: Unexpected token (1080:4)
  1078 |     console.error('Erreur connexion API:', error);
  1079 |     return { success: false, message: 'Erreur connexion API' };
> 1080 |   } catch (timeoutError) {
       |     ^
  1081 |     console.error('Timeout de connexion:', timeoutError);
  1082 |     return { success: false, message: 'Timeout de connexion (10s)' };
  1083 |     }
SyntaxError: /Users/expo/workingdir/build/utils/storage.ts: Unexpected token (1080:4)
  1078 |     console.error('Erreur connexion API:', error);
  1079 |     return { success: false, message: 'Erreur connexion API' };
> 1080 |   } catch (timeoutError) {
       |     ^
  1081 |     console.error('Timeout de connexion:', timeoutError);
  1082 |     return { success: false, message: 'Timeout de connexion (10s)' };
  1083 |     }
    at constructor (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:367:19)
    at TypeScriptParserMixin.raise (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6627:19)
    at TypeScriptParserMixin.unexpected (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6647:16)
    at TypeScriptParserMixin.parseExprAtom (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11442:16)
    at TypeScriptParserMixin.parseExprSubscripts (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11076:23)
    at TypeScriptParserMixin.parseUpdate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11061:21)
    at TypeScriptParserMixin.parseMaybeUnary (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11041:23)
    at TypeScriptParserMixin.parseMaybeUnary (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9852:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10894:61)
    at TypeScriptParserMixin.parseExprOps (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10899:23)
    at TypeScriptParserMixin.parseMaybeConditional (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10876:23)
    at TypeScriptParserMixin.parseMaybeAssign (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10826:21)
    at TypeScriptParserMixin.parseMaybeAssign (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9801:20)
    at TypeScriptParserMixin.parseExpressionBase (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10779:23)
    at /Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10775:39
    at TypeScriptParserMixin.allowInAnd (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12422:16)
    at TypeScriptParserMixin.parseExpression (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10775:17)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12895:23)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementListItem (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12747:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13316:61)
    at TypeScriptParserMixin.parseBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseBlock (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13297:10)
    at TypeScriptParserMixin.parseFunctionBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12101:24)
    at TypeScriptParserMixin.parseArrowExpression (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12076:10)
    at TypeScriptParserMixin.parseAsyncArrowFromCallExpression (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11259:10)
    at TypeScriptParserMixin.parseAsyncArrowFromCallExpression (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9781:18)
    at TypeScriptParserMixin.parseCoverCallAndAsyncArrowHead (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11189:27)
    at TypeScriptParserMixin.parseSubscript (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11115:19)
    at TypeScriptParserMixin.parseSubscript (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9353:18)
    at TypeScriptParserMixin.parseSubscripts (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11089:19)
    at TypeScriptParserMixin.parseExprSubscripts (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11080:17)
    at TypeScriptParserMixin.parseUpdate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11061:21)
    at TypeScriptParserMixin.parseMaybeUnary (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11041:23)
    at TypeScriptParserMixin.parseMaybeUnary (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9852:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10894:61)
    at TypeScriptParserMixin.parseExprOps (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10899:23)
    at TypeScriptParserMixin.parseMaybeConditional (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10876:23)
    at TypeScriptParserMixin.parseMaybeAssign (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10826:21)
    at TypeScriptParserMixin.parseMaybeAssign (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9801:20)
    at /Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10795:39
    at TypeScriptParserMixin.allowInAnd (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12422:16)
    at TypeScriptParserMixin.parseMaybeAssignAllowIn (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10795:17)
    at TypeScriptParserMixin.parseVar (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13384:91)
    at TypeScriptParserMixin.parseVarStatement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13230:10)
    at TypeScriptParserMixin.parseVarStatement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9493:31)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12851:23)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
npx expo export:embed --eager --platform ios --dev false exited with non-zero code: 1